version 0.42, ?

* CentOS 64-bit was reported not defining PAGE_SIZE in <asm/page.h>
  Added a workaround to enable compilation.

* When FRESH_CONNECT=1 tag is specified for FTP URLs, new 
  FTP connections have been opened in due course, but old FTP connections 
  were kept forever and not closed. The bugfix committed to SVN forces old 
  connections to be closed.

  Current behavior is the following:
   a) an established control FTP-connection is closed immediately just after a 
       file transfer is accomplished;
   b) an established data FTP-connection is not closed after transfer, but is kept 
      during sleeping time and goes closed only after a new data connection is opened;

  Current behavior still may require to define twice higher number of connections 
  allowed by your FTP server, than the number of clients in curl-loader.	
  Thanks to John Gatewood Ham <buraphalinuxserver@gmail.com> for
  reporting the problem and testing patches.


version 0.41, July 26 2007, svn 492

* Critical bug, where loading credentials/tokens from file has been
   broken. Thanks to Artur Barashev <artvbar@gmail.com> for this
   patch.
	
* Building libcurl with --without-libidn option. This creates mainly
   building problems. Users, that would like to resolve IDNA domain
   names with "international" letters should build it with
   --with-libidn=full-path-dir.

* Setting empty cookies to CURL handle only for the very first url.
  The bug has been reported by Artur <artvbar@gmail.com> Fixed?

* Advanced to curl-7.16.4 recent release. Patch ./patches/curl-hash.patch
  moved to curl mainline, and, therefore, is not necessary and removed.

* Makefile DESTDIR to support make install DESTDIR=/some/fake/root
  for packaging purposes. Thanks to John Gatewood Ham
  <buraphalinuxserver@gmail.com> for this patch.


version 0.40, July 5 2007, svn 468

* Tag FETCH_PROBABILITY adds support in order a client (virtual)
   to deal with a URL not as a must, but with a certain probability.