@@ -1,0 +1,22 @@
+########### GENERAL SECTION ################################
+
+BATCH_NAME= rate-limit
+CLIENTS_NUM_MAX=10 # Same as CLIENTS_NUM
+#CLIENTS_NUM_START=10
+#CLIENTS_RAMPUP_INC=5
+INTERFACE   =eth0
+NETMASK=16  
+IP_ADDR_MIN= 192.168.1.1
+IP_ADDR_MAX= 192.168.1.10
+CYCLES_NUM= -1
+URLS_NUM= 1
+
+########### URL SECTION ####################################
+
+#URL=http://localhost/apache2-default/ACE-INSTALL.html
+URL=http://localhost/ACE-INSTALL.html
+URL_SHORT_NAME="local-apache"
+REQUEST_TYPE=GET
+TIMER_URL_COMPLETION = 0
+TIMER_AFTER_URL_SLEEP = 0
+TRANSFER_LIMIT_RATE=10000
